# exegr

./: .gitignore  Cargo.toml  Readme.md  pyproject.toml
src/: lib.rs  tests.rs
trust/: Cargo.toml
trust/src/: main.rs
