[package]
name = "exegr"
version = "0.1.0"
authors = ["AmreshVenugopal <amresh.venugopal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "exegr"
crate-type = ["cdylib"]

[dependencies]
regex = "1.3.7"

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]
