[tool.poetry]
name = "exegr"
version = "0.1.3"
description = "Python binding for a custom implementation."
authors = ["AmreshVenugopal <amresh.venugopal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["maturin"]
build-backend = "maturin"

